# BezierCurveTracking

./: CMakeLists.txt  README.md
example/: demo.cpp  demo_cubic_bezier.cpp  demo_linear_bezier.cpp  demo_multi_agents.cpp  demo_obstacles.cpp  demo_quadratic_bezier.cpp  demo_tracking.cpp
include/bezier_tracking/: bezier_curve.hpp  bezier_curves.hpp  line_tracking.hpp  linear_bezier.hpp  map.hpp  obstacles.hpp  path_planner.hpp
simulation/: config.txt  config1.txt  general.txt  map.txt  map1.txt  map2.txt  obstacles.txt  planner.txt  planner1.txt  planner2.txt  robot.txt  robot1.txt  robot2.txt  simulation.pde
src/: bezier_curve.cpp  bezier_curves.cpp  line_tracking.cpp  linear_bezier.cpp  map.cpp  obstacles.cpp  path_planner.cpp
videos/: linearbezier_demo1.mov  linearbezier_demo2.mov  linearbezier_demo3.mov  linearbezier_demo4.mov
